fixed popup alignment

--- a/src/App.css
+++ b/src/App.css
@@ -136,14 +136,20 @@ html {
 
 .popup-container {
   position: fixed;
-  top: 2.5rem;
-  left: 2.5rem;
-  width: 90vw;
-  height: 90vh;
+  width: 95vw;
+  height: 95vh;
+  top: 50%;
+  left: 50%;
+  margin-top: -47.5vh; /* Negative half of height. */
+  margin-left: -47.5vw; /* Negative half of width. */
+  text-align: center;
   background-color: #d3d3d3;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
+  border: 1px solid red;
+  border-radius: 10px;
 }
 
 .popup-inner {
